# experiments_hinagata

./: .gitignore  Makefile  README.md  pyproject.toml
exp/sample/: diary.sh  main.py  test.ipynb
exp/sample/configs/: base_config.yaml  cifar10.yaml  resnet18.yaml
exp/sample/runs/2025-08-03_22-08-04/: events.out.tfevents.1754226485.node02.67278.0  metrics.csv
ref/: sample.txt
shared/utils/: config.py  get_dataset.py  logger.py  writer.py
