[project]
name = "experiments-hinagata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=0.34.3",
    "ipykernel>=6.30.0",
    "pyyaml>=6.0.2",
    "tensorboard>=2.20.0",
    "timm>=1.0.19",
    "torch>=2.7.1",
    "torch-summary>=1.4.5",
    "torchvision>=0.22.1",
    "webdataset>=1.0.2",
]
